--- a/weMarketWeb/package.json
+++ b/weMarketWeb/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "babel-runtime": "^6.20.0",
     "meteor-node-stubs": "~0.2.4",
-    "wechat-api": "^1.35.1"
+    "wechat-api": "^1.35.1",
+    "wechat-oauth": "^1.2.1"
   }
 }
