--- a/weMarketWeb/package.json
+++ b/weMarketWeb/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.20.0",
+    "jssha": "^2.3.1",
     "meteor-node-stubs": "~0.2.4",
     "wechat-api": "^1.35.1",
     "wechat-oauth": "^1.2.1"
